--- a/package.json
+++ b/package.json
@@ -1,15 +1,23 @@
 {
-  "name": "starter",
+  "name": "zid-wr-making-requests-xx-assignment",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "zid-wr-making-requests-xx-assignment qualified challenge.",
   "scripts": {
-    "start": "json-server --watch --port=5000 db.json"
+    "docker:build": "docker image build . -t thinkful-ed/zid-wr-making-requests-xx-assignment",
+    "docker:run": "docker run --rm -it -p 3000:3000 thinkful-ed/zid-wr-making-requests-xx-assignment",
+    "docker:stop": "docker stop $(docker ps -q)",
+    "docker:test": "docker run -i thinkful-ed/zid-wr-making-requests-xx-assignment npm test",
+    "start:solution": "npm run -it docker:build && npm run docker:run",
+    "test": "jest",
+    "test:solution": "npm run docker:build && npm run docker:test"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "author": "Thinkful.com",
+  "license": "UNLICENSED",
+  "devDependencies": {
+    "jest": "^27.0.6"
+  },
   "dependencies": {
-    "json-server": "0.16.1"
+    "axios": "^0.21.1"
   }
 }
